---
title: MineMaze Domain Model (Current)
---
classDiagram
    %% Core domain classes
    class MineMaze {
        -MapGrid mapGrid
        -Pusher pusher
        -int gameTick
        -PropertiesLoader properties
        +startGame()
        +endGame()
    }
    class MapGrid {
        -Ore[] ores
        -Target[] targets
        -OreCart[] oreCarts
        -HardRock[] hardRocks
        -Boulder[] boulders
        +getElementAt(x, y)
        +setElementAt(x, y, element)
        +getNeighbors(x, y)
    }
    class Ore {
        +isCollected
    }
    class Target {
    }
    class OreCart {
    }
    class HardRock {
    }
    class Boulder {
    }
    class Pusher {
        -int x
        -int y
        +moveTo(x, y)
        +pushOre(ore)
    }
    class PropertiesLoader {
        +loadProperties()
        +getConfig(key)
    }

    %% Relationships
    MineMaze o-- MapGrid : "has"
    MineMaze o-- Pusher : "controls"
    MineMaze o-- PropertiesLoader : "uses"
    MapGrid "1" o-- "*" Ore : "contains"
    MapGrid "1" o-- "*" Target : "contains"
    MapGrid "1" o-- "*" OreCart : "contains"
    MapGrid "1" o-- "*" HardRock : "contains"
    MapGrid "1" o-- "*" Boulder : "contains"
    Pusher --> Ore : "pushes"